# hermes-ct2

./: .gitignore  README.md  ct2.py  pyproject.toml  sync-db.sh
dashboard/: index.js  manifest.json  plugin_api.py  tasks-manifest.json  tasks.js
output/: scorecards.html
src/: __init__.py  approval_inbox.py  audit_dedup.py  briefing.py  capacity.py  context_pack.py  db.py  delegation_lifecycle.py  diario_scanner.py  estado_scanner.py  github_integration.py  indice_scanner.py  mcp_server.py  metrics.py  notifier.py  operations.py  planner.py  plano_scanner.py  project_discovery.py  scanner.py  server.py  slack_events.py  sprint_scanner.py  taskfile_scanner.py
