[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-ct2"
version = "1.0.0"
description = "Control Tower for Hermes Agent teams — kanban, projects, audit, scorecards"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CT2 Team"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",
]

[project.scripts]
ct2 = "ct2_cli:main"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
